--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 
   <style>
     /* --- General Styles --- */
-    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; max-width: auto; margin: 0 auto; padding: 20px; background-color: #f5f5f5; }
+    body { font-family: Georgia, serif; max-width: auto; margin: 0 auto; padding: 20px; background-color: #f5f5f5; }
     h1 { color: #2c3e50; text-align: center; margin-bottom: 30px; }
     button { padding: 12px 25px; color: white; border: none; border-radius: 4px; cursor: pointer; font-weight: bold; margin-top: 15px; transition: background 0.3s; }
     button:hover { opacity: 0.9; }
@@ -25,12 +25,18 @@
       gap: 30px;
     }
     .sidebar {
-      flex-basis: 320px; /* Fixed width for the sidebar */
-      flex-shrink: 0; /* Prevents sidebar from shrinking */
+      flex-basis: 320px;
+      flex-shrink: 0;
       background: white; 
       padding: 25px; 
       border-radius: 8px; 
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+
+      /* --- NEW STICKY SCROLLING STYLES --- */
+      position: sticky;
+      top: 20px; /* Aligns with the body's padding */
+      max-height: calc(100vh - 40px); /* Limits height to viewport minus top/bottom padding */
+      overflow-y: auto; /* Adds a scrollbar INSIDE the sidebar if its content is too tall */
     }
 
     /* --- Component Styles --- */
@@ -40,7 +46,7 @@
       border-radius: 8px; 
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
-    textarea#pnrInput { width: 100%; height: 200px; padding: 12px; border: 1px solid #ddd; border-radius: 4px; font-family: monospace; resize: vertical; box-sizing: border-box; }
+    textarea#pnrInput { width: 100%; height: 100px; padding: 12px; border: 1px solid #ddd; border-radius: 4px; font-family: monospace; resize: vertical; box-sizing: border-box; }
     
     /* Button Specifics */
     #convertBtn { background: #3498db; }
@@ -60,7 +66,7 @@
     }
 
     /* --- Other Visual Styles (Largely Unchanged) --- */
-    .output-container { border: 1px solid #e0e0e0; border-radius: 8px; background: white; box-sizing: border-box; }
+    .output-container { border: 1px solid #e0e0e0; border-radius: 0px; background: white; box-sizing: border-box; }
     .itinerary-header { padding: 10px; border-bottom: 1px solid #eee; }
     .itinerary-header h4 { margin: 0 0 5px 0; color: #555; }
     .itinerary-header p { margin: 0; font-family: monospace; font-size: 1.1em; color: #333; }
