--- a/public/index.html
+++ b/public/index.html
@@ -213,5 +213,9 @@
 
 <script src="/js/html2canvas.min.js"></script>
 <script src="/js/main.js"></script>
+<script>
+  window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+</script>
+<script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
