--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
   <style>
     /* --- General Styles --- */
-    body { font-family: Georgia, serif; max-width: auto; margin: 0 auto; padding: 20px; background-color: #f5f5f5; }
+    body { font-family: sarosregular; max-width: auto; margin: 0 auto; padding: 20px; background-color: #f5f5f5; }
     h1 { color: #2c3e50; text-align: center; margin-bottom: 30px; }
     button { padding: 12px 25px; color: white; border: none; border-radius: 4px; cursor: pointer; font-weight: bold; margin-top: 15px; transition: background 0.3s; }
     button:hover { opacity: 0.9; }
