--- a/public/index.html
+++ b/public/index.html
@@ -140,6 +140,7 @@
         <button id="screenshotBtn" style="display:none;">📷 Copy Screenshot</button>
         <button id="copyTextBtn" style="display:none;">📋 Copy as Text</button>
         <div id="output" contenteditable="true">
+          <img src="simbavoyages.png" alt="Simba Voyages">
           <div class="info">Enter PNR data and click "Convert PNR".</div>
         </div>
       </div>
