--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,19 @@
     }
     textarea#pnrInput { width: 100%; height: 100px; padding: 12px; border: 1px solid #ddd; border-radius: 4px; font-family: monospace; resize: vertical; box-sizing: border-box; }
     
+    .itinerary-main-logo-container {
+      text-align: center; /* Center the logo */
+      padding-bottom: 10px;
+      margin-bottom: 10px;
+      border-bottom: 1px solid #eee; /* A subtle separator line */
+    }
+
+    .itinerary-main-logo {
+      max-width: 150px;
+      max-height: 35px; /* Control the logo size */
+      object-fit: contain;
+    }
+
     /* Button Specifics */
     #convertBtn { background: #3498db; }
     #pasteBtn { background: #27ae60; margin-left: 10px; }
@@ -64,6 +77,9 @@
       min-width: 300px; /* Prevents it from getting too small */
       max-width: 100%; /* Prevents it from overflowing its container */
       overflow-x: auto; /* Adds a scrollbar if content is extremely wide */
+    }
+    .itinerary-main-logo-container + .itinerary-header {
+        border-top: none;
     }
 
     /* --- Other Visual Styles (Largely Unchanged) --- */
@@ -140,7 +156,6 @@
         <button id="screenshotBtn" style="display:none;">📷 Copy Screenshot</button>
         <button id="copyTextBtn" style="display:none;">📋 Copy as Text</button>
         <div id="output" contenteditable="true">
-          <img src="simbavoyages.png" alt="Simba Voyages">
           <div class="info">Enter PNR data and click "Convert PNR".</div>
         </div>
       </div>
