UPDATED:added toggle button and login

--- a/public/index.html
+++ b/public/index.html
@@ -164,6 +164,7 @@
     <div class="sidebar">
       <div class="options">
         <h3>Display Options</h3>
+        <label><input type="checkbox" id="showItineraryLogo" checked> Show Main Itinerary Logo</label> <!-- ADD THIS LINE -->
         <label><input type="checkbox" id="showAirline" checked> Show Airline</label>
         <label><input type="checkbox" id="showAircraft" checked> Show Aircraft</label>
         <label><input type="checkbox" id="showClass"> Show Class (if available)</label>
