--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
     textarea#pnrInput { width: 100%; height: 100px; padding: 12px; border: 1px solid #ddd; border-radius: 4px; font-family: monospace; resize: vertical; box-sizing: border-box; }
     
     .itinerary-main-logo-container {
-      text-align: center; /* Center the logo */
+      text-align: left; /* Center the logo */
       padding-bottom: 0px;
       margin-bottom: 10px;
       border-bottom: 1px solid #eee; /* A subtle separator line */
