--- a/public/index.html
+++ b/public/index.html
@@ -49,17 +49,30 @@
     }
     textarea#pnrInput { width: 100%; height: 100px; padding: 12px; border: 1px solid #ddd; border-radius: 4px; font-family: monospace; resize: vertical; box-sizing: border-box; }
     
+    /* --- UPDATED LOGO CONTAINER STYLES --- */
     .itinerary-main-logo-container {
-      text-align: left; /* Center the logo */
-      padding-bottom: 0px;
+      display: flex; /* Use Flexbox for layout */
+      justify-content: space-between; /* Pushes logo to left and text to right */
+      align-items: left; /* Vertically aligns logo and text */
+      padding-bottom: 10px;
       margin-bottom: 10px;
-      border-bottom: 1px solid #eee; /* A subtle separator line */
+      border-bottom: 1px solid #eee;
     }
 
     .itinerary-main-logo {
       max-width: 150px;
-      max-height: 35px; /* Control the logo size */
+      max-height: 35px;
       object-fit: contain;
+      flex-shrink: 0; /* Prevents the logo from shrinking */
+    }
+
+    /* Style for the new text block */
+    .itinerary-logo-text {
+      font-size: 0.8em;
+      color: #555;
+      text-align: right; /* Aligns the text to the right within its container */
+      line-height: 1.2;
+      margin-left: 15px; /* Adds some space between the logo and text */
     }
 
     /* Button Specifics */
