--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
   <style>
     /* --- General Styles --- */
-    body { font-family: sarosregular; max-width: auto; margin: 0 auto; padding: 20px; background-color: #f5f5f5; }
+    body { font-family: Raleway,sans-serif; max-width: auto; margin: 0 auto; padding: 20px; background-color: #f5f5f5; }
     h1 { color: #2c3e50; text-align: center; margin-bottom: 30px; }
     button { padding: 12px 25px; color: white; border: none; border-radius: 4px; cursor: pointer; font-weight: bold; margin-top: 15px; transition: background 0.3s; }
     button:hover { opacity: 0.9; }
@@ -73,7 +73,7 @@
       border-radius: 8px; 
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
-    textarea#pnrInput { width: 100%; height: 100px; padding: 12px; border: 1px solid #ddd; border-radius: 4px; font-family: monospace; resize: vertical; box-sizing: border-box; }
+    textarea#pnrInput { width: 100%; height: 100px; padding: 12px; border: 1px solid #ddd; border-radius: 4px; font-family: Raleway,sans-serif; resize: vertical; box-sizing: border-box; }
     
     /* --- UPDATED LOGO CONTAINER STYLES --- */
     .itinerary-main-logo-container {
@@ -125,14 +125,14 @@
     .output-container { border: 1px solid #e0e0e0; border-radius: 0px; background: white; box-sizing: border-box; }
     .itinerary-header { padding: 10px; border-bottom: 1px solid #eee; }
     .itinerary-header h4 { margin: 0 0 5px 0; color: #555; }
-    .itinerary-header p { margin: 0; font-family: monospace; font-size: 1.1em; color: #333; }
+    .itinerary-header p { margin: 0; font-family: Raleway,sans-serif; font-size: 14px; color: #333; }
     .itinerary-block { padding: 3px; }
     .flight-item { border-bottom: 1px dashed #e0e0e0; padding: 10px 0;}
     .flight-item:last-child { border-bottom: none; }
     .transit-item { font-style: italic; color: #a7a7a7; margin: -7px 0; background: #f8f9fa; border-radius: 4px; text-align: center;}
     .airline-logo { width: 60px; height: 60px; object-fit: contain; padding: 4px; background: #fff; border-radius: 4px; border: 0px solid #ddd; vertical-align: middle; }
-    .flight-header { font-weight: bold; font-size: 1.1em; color: #2c3e50; margin-bottom: 8px; }
-    .flight-detail { font-size: 0.95em; color: #34495e; margin-bottom: 4px; display: flex; flex-wrap: wrap; gap: 5px 10px; }
+    .flight-header { font-weight: bold; font-size: 14px; color: #2c3e50; margin-bottom: 8px; }
+    .flight-detail { font-size: 12px; color: #34495e; margin-bottom: 4px; display: flex; flex-wrap: wrap; gap: 5px 10px; }
     .flight-detail strong { white-space: nowrap; color: #555; }
     .flight-content { display: flex; gap: 12px; align-items: flex-start; }
     .flight-content > img { flex-shrink: 0; }
