--- a/public/index.html
+++ b/public/index.html
@@ -129,7 +129,7 @@
     .itinerary-block { padding: 3px; }
     .flight-item { border-bottom: 1px dashed #e0e0e0; padding: 10px 0;}
     .flight-item:last-child { border-bottom: none; }
-    .transit-item { font-style: italic; color: #a7a7a7; margin: -7px 0; background: #f8f9fa; border-radius: 4px; text-align: center;}
+    .transit-item { font-style: italic; color: #a7a7a7; margin: -7px 0; background: #ffffff; border-radius: 4px; text-align: center;}
     .airline-logo { width: 60px; height: 60px; object-fit: contain; padding: 4px; background: #fff; border-radius: 4px; border: 0px solid #ddd; vertical-align: middle; }
     .flight-header { font-weight: bold; font-size: 14px; color: #2c3e50; margin-bottom: 8px; }
     .flight-detail { font-size: 12px; color: #34495e; margin-bottom: 4px; display: flex; flex-wrap: wrap; gap: 5px 10px; }
