style and alignments changed for logo text

--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
       display: flex; /* Use Flexbox for layout */
       justify-content: space-between; /* Pushes logo to left and text to right */
       align-items: left; /* Vertically aligns logo and text */
-      padding-bottom: 10px;
+      padding-bottom: 5px;
       margin-bottom: 10px;
       border-bottom: 1px solid #eee;
     }
@@ -95,10 +95,10 @@
     /* Style for the new text block */
     .itinerary-logo-text {
       font-size: 0.8em;
-      color: #555;
+      color: #363636;
       text-align: right; /* Aligns the text to the right within its container */
       line-height: 1.2;
-      margin-left: 15px; /* Adds some space between the logo and text */
+      margin: 5px 10px 0 15px; /* Adds some space between the logo and text */
     }
 
     /* Button Specifics */
@@ -127,7 +127,7 @@
     .itinerary-header h4 { margin: 0 0 5px 0; color: #555; }
     .itinerary-header p { margin: 0; font-family: Raleway,sans-serif; font-size: 14px; color: #333; }
     .itinerary-block { padding: 3px; }
-    .flight-item { border-bottom: 1px dashed #e0e0e0; padding: 10px 0;}
+    .flight-item { border-bottom: 1px dashed #635d5d; padding: 10px 0;}
     .flight-item:last-child { border-bottom: none; }
     .transit-item { font-style: italic; color: #a7a7a7; margin: -7px 0; background: #ffffff; border-radius: 4px; text-align: center;}
     .airline-logo { width: 60px; height: 60px; object-fit: contain; padding: 4px; background: #fff; border-radius: 4px; border: 0px solid #ddd; vertical-align: middle; }
