--- a/public/index.html
+++ b/public/index.html
@@ -205,7 +205,8 @@
         <h3>Display Options</h3>
         <label><input type="checkbox" id="showItineraryLogo" checked> Show Main Itinerary Logo</label> <!-- ADD THIS LINE -->
         <label><input type="checkbox" id="showAirline" checked> Show Airline</label>
-        <label><input type="checkbox" id="showAircraft" checked> Show Aircraft</label>
+        <label><input type="checkbox" id="sq" checked> Show Aircraft</label>
+        <label><input type="checkbox" id="showOperatedBy" checked> Show Operated By</label>
         <label><input type="checkbox" id="showClass"> Show Class (if available)</label>
         <label><input type="checkbox" id="showMeal"> Show Meal</label>
         <label><input type="checkbox" id="showNotes"> Show Notes</label>
