--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,8 @@
       display: flex;                 /* 1. Use Flexbox for layout */
       justify-content: space-between;  /* 2. Push items to opposite ends */
       align-items: center;             /* 3. Vertically align them */
-      padding-bottom: 10px;
-      margin-bottom: 10px;
+      padding: 0px 5px 1px 0;
+      margin-bottom: 1px;
       border-bottom: 1px solid #eee;
     }
 
@@ -275,7 +275,7 @@
           <img id="customLogoPreview" alt="Logo Preview" class="custom-logo-preview">
         </div>
         <div class="custom-branding-input">
-          <label for="customTextInput">Custom Text (use <br> for line breaks):</label>
+          <label for="customTextInput">Custom Text:</label>
           <textarea id="customTextInput" rows="3" placeholder="Your Company Name
     Contact: +1 234 567 890"></textarea>
         </div>
