--- a/public/index.html
+++ b/public/index.html
@@ -233,7 +233,7 @@
         <div class="fare-options">
           <div style="display: flex; align-items: center; flex-wrap: wrap; gap: 10px; margin-top: 8px;">
             <label for="currencySelect">Currency:</label>
-            <select id="currencySelect" style="padding: 4px;"> <option value="USD" selected>$</option> <option value="EUR">€</option> <option value="INR">₹</option> </select>
+            <select id="currencySelect" style="padding: 4px;"> <option value="USD" selected>USD $</option> <option value="EUR">EUR €</option> <option value="INR">INR ₹</option> </select>
             <label for="adultInput">Pax:</label> <input id="adultInput" type="number" min="1" value="1" style="width: 30px; padding: 4px;">
             <label for="fareInput">Fare:</label> <input id="fareInput" type="number" step="any" placeholder="Optional" style="width: 65px; padding: 4px;">
             <label for="feeInput">Fee:</label> <input id="feeInput" type="number" step="any" placeholder="Optional" style="width: 65px; padding: 4px;">
