--- a/public/index.html
+++ b/public/index.html
@@ -195,7 +195,7 @@
     .error { color: #e74c3c; padding: 15px; background-color: #fdecea; border: 1px solid #ef9a9a; border-radius: 4px; margin-bottom: 15px; }
     .info { color: #3498db; padding: 15px; background-color: #e3f2fd; border: 1px solid #bbdefb; border-radius: 4px; margin-bottom: 15px; }
     .dev-banner { padding: 12px; background-color: #fff9c4; color: #f57f17; border-left: 5px solid #fbc02d; margin-bottom: 15px; font-weight: bold; }
-    .fare-summary { margin-top: -1px; margin-left: 5px; padding-top: 10px; border-top: 1px solid #e0e0e0; font-weight: 500; font-size: 14px; white-space: pre-line; }
+    .fare-summary { font-weight: bold; margin-top: -1px; margin-left: 5px; padding-top: 10px; border-top: 1px solid #e0e0e0; font-weight: 500; font-size: 14px; white-space: pre-line; }
     .loading-spinner { display: none; width: 40px; height: 40px; margin: 20px auto; border: 4px solid #f3f3f3; border-top: 4px solid #3498db; border-radius: 50%; animation: spin 1s linear infinite; }
     @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
    
