--- a/public/index.html
+++ b/public/index.html
@@ -171,6 +171,7 @@
       min-width: 300px; /* Prevents it from getting too small */
       max-width: 100%; /* Prevents it from overflowing its container */
       overflow-x: auto; /* Adds a scrollbar if content is extremely wide */
+      padding-right: 5px;
     }
     .itinerary-main-logo-container + .itinerary-header {
         border-top: none;
