--- a/public/index.html
+++ b/public/index.html
@@ -187,7 +187,7 @@
     .flight-item:last-child { border-bottom: none; }
     .transit-item { font-style: italic; color: #a7a7a7; margin: -7px 0; background: #ffffff; border-radius: 4px; text-align: center; padding-bottom: 10px}
     .airline-logo { width: 60px; height: 60px; object-fit: contain; padding: 4px; background: #fff; border-radius: 4px; border: 0px solid #ddd; vertical-align: middle; }
-    .flight-header { font-weight: bold; font-size: 14px; color: #2c3e50; margin-bottom: 8px; }
+    .flight-header { font-weight: bold; font-size: 14px; color: #2c3e50; margin: 0 10px 8px 0; }
     .flight-detail { font-size: 12px; color: #34495e; margin-bottom: 4px; display: flex; flex-wrap: wrap; gap: 5px 10px; }
     .flight-detail strong { white-space: nowrap; color: #555; }
     .flight-content { display: flex; gap: 12px; align-items: flex-start; }
