--- a/public/index.html
+++ b/public/index.html
@@ -178,7 +178,7 @@
     }
 
     /* --- Other Visual Styles (Largely Unchanged) --- */
-    .output-container { border: 1px solid #e0e0e0; border-radius: 0px; background: white; box-sizing: border-box; }
+    .output-container { border: 1px solid #e0e0e0; border-radius: 0px; background: white; box-sizing: border-box; marg }
     .itinerary-header { padding: 10px; border-bottom: 1px solid #eee; }
     .itinerary-header h4 { margin: 0 0 5px 0; color: #555; }
     .itinerary-header p { margin: 0; font-family: Raleway,sans-serif; font-size: 14px; color: #333; }
