--- a/public/index.html
+++ b/public/index.html
@@ -184,13 +184,6 @@
         border-radius: 4px;
     }
 
-    /* Add this new CSS rule inside your <style> block */
-
-    .clear-input-btn {
-        background-color: #e74c3c; /* A distinct red color */
-        margin-right: 10px; /* Add some space between it and the paste button */
-    }
-
     /* Add/Update these CSS rules */
 
     .history-controls {
@@ -452,7 +445,8 @@
           </div>
         </div>
         <!-- NEW PASTE BUTTON ADDED -->
-        <button id="clearBtn" class="clear-input-btn">❌ Clear Input</button>        <button id="pasteBtn">📋 Paste from Clipboard</button>
+        <button id="convertBtn">Convert PNR</button>
+        <button id="pasteBtn">📋 Paste from Clipboard</button>
         <button id="historyBtn" class="history-btn">📜 History</button>
         <div class="loading-spinner" id="loadingSpinner"></div>
       </div>
@@ -461,7 +455,7 @@
         <button id="screenshotBtn" style="display:none;">📷 Copy Screenshot</button>
         <button id="copyTextBtn" style="display:none;">📋 Copy as Text</button>
         <div id="output" contenteditable="true">
-          <div class="info">Click "Paste from Clipboard".</div>
+          <div class="info">click "Paste from Clipboard".</div>
         </div>
       </div>
     </div>
