--- a/public/index.html
+++ b/public/index.html
@@ -302,7 +302,10 @@
       max-height: calc(100vh - 40px); /* Limits height to viewport minus top/bottom padding */
       overflow-y: auto; /* Adds a scrollbar INSIDE the sidebar if its content is too tall */
     }
-
+    .clear-input-btn {
+        background-color: #e74c3c; /* Red color */
+        margin-right: 10px;
+    }
     /* --- Component Styles --- */
     .input-area, .output-area { 
       background: white; 
@@ -445,7 +448,7 @@
           </div>
         </div>
         <!-- NEW PASTE BUTTON ADDED -->
-        <button id="convertBtn">Convert PNR</button>
+        <button id="clearBtn" class="clear-input-btn">❌ Clear Input</button>
         <button id="pasteBtn">📋 Paste from Clipboard</button>
         <button id="historyBtn" class="history-btn">📜 History</button>
         <div class="loading-spinner" id="loadingSpinner"></div>
