hamburger icon update

--- a/public/index.html
+++ b/public/index.html
@@ -419,7 +419,7 @@
     #developerModePanel button.save-all-btn { background-color: #4CAF50; color: white; padding: 10px 20px; font-size: 1.1em; margin-top: 20px; margin-bottom: 10px;border: none;border-radius: 5px;cursor: pointer;}
     #developerModePanel button.save-all-btn:hover { background-color: #45a049;}
     
-    @media (max-width: 900px) {
+    /* @media (max-width: 900px) {
       .container { 
         flex-direction: column; 
       }
@@ -427,7 +427,7 @@
         width: 100%;
         box-sizing: border-box;
       }
-    }
+    } */
     /* --- NEW MOBILE MENU STYLES --- */
 
     /* Style for the hamburger button itself */
