--- a/public/index.html
+++ b/public/index.html
@@ -425,13 +425,13 @@
     .mobile-menu-button {
       display: none;
       position: fixed;
-      top: 15px;
+      top: 21px;
       right: 15px;
       z-index: 1010;
       background: #fff;
       color: #2c3e50;
       border: 1px solid #ddd;
-      border-radius: 50%;
+      border-radius: 0px 0px 0px 25px;
       width: 50px;
       height: 50px;
       padding: 0;
