removed dashed line

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
         .itinerary-logo-text { font-size: 0.8em; color: #555; text-align: right; line-height: 1.3; white-space: pre-line; }
         .itinerary-header { padding: 15px; border-bottom: 1px solid #eee; }
         .itinerary-header p { margin: 0; font-size: 14px; }
-        .flight-item { padding: 15px; border-bottom: 1px dashed #ccc; }
+        .flight-item { padding: 15px 0 0 0; }
         .flight-item:last-child { border-bottom: none; }
         .transit-item { font-style: italic; color: #888; text-align: center; padding: 10px 0; background-color: #f9f9f9; }
         .airline-logo { width: 50px; height: 50px; object-fit: contain; border-radius: 5px; }
